# LaneSlopeEstimation

./: README.md
Alghoritms/: CMakeLists.txt
Alghoritms/3DOptimization/: main.cpp
Alghoritms/SecondDerivatives/: main.cpp
Alghoritms/utils/: myimageprocessing.cpp  myimageprocessing.h  mymath.cpp  mymath.h
SimpleLaneSimulator/: CMakeLists.txt  main.cpp  road.cpp  road.h  scenefacade.cpp  scenefacade.h
mydataset/road1/: whatisit
mydataset/road2/: whatisit
mydataset/road3/: whatisit
mydataset/road4/: whatisit
mydataset/road5/: whatisit
